--- a/jambo-spl/.env
+++ b/jambo-spl/.env
@@ -1,8 +1,8 @@
 # RPC endpoint
-# RPC_URL=
+#RPC_URL="https://api.testnet.solana.com"
 
 # absolute path for a local keypair file
 LOCAL_PAYER_JSON_ABSPATH="/Users/admin/.config/solana/payer.json"
 
 # absolute path for a local keypair file
-LOCAL_OWNER_JSON_ABSPATH="/Users/admin/.config/solana/owner.json"
+LOCAL_CREATOR_JSON_ABSPATH="/Users/admin/.config/solana/owner.json"
