--- a/jambo-spl/package.json
+++ b/jambo-spl/package.json
@@ -9,6 +9,7 @@
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.1",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
+    "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "^1.91.2",
     "bs58": "^5.0.0",
     "dotenv": "^16.4.5"
